fixing overflow

--- a/styles/index.css
+++ b/styles/index.css
@@ -17,7 +17,6 @@ font-family: 'Crimson Text', serif;
 	height: 600px;
 	/*To fight inline-block spaces breaking 100% width*/
 	font-size: 0px;
-	overflow-x: hidden;
 }
 .spacer {
 	z-index: 30;
@@ -73,6 +72,7 @@ font-family: 'Crimson Text', serif;
 	display: inline-block;
 	background: -webkit-linear-gradient(rgba(36, 22, 77, 0.9), rgba(36, 22, 77, 0.9)), url('../images/backgroundCompressed.png');
 	background: linear-gradient( rgba(36, 22, 77, 0.9), rgba(36, 22, 77, 0.9)), url('../images/backgroundCompressed.png');
+	overflow: hidden;
 }
 .carouselComponent {
 	position: relative;
